@@ -29,7 +29,7 @@ if ($ENV{EXTENDED_TESTING}) {
     'Time::Moment' => 0,
     'DateTime::Format::RFC3339' => 0,
     'Email::Address::XS' => '1.04',
-    'Data::Validate::Domain' => 0,
+    'Data::Validate::Domain' => 0.13,
     'Net::IDN::Encode' => 0,
   };
 }
@@ -38,7 +38,7 @@ if ($ENV{AUTHOR_TESTING}) {
   eval { require Time::Moment; 1 } or fail $@;
   eval { require DateTime::Format::RFC3339; 1 } or fail $@;
   eval { require Email::Address::XS; Email::Address::XS->VERSION(1.04); 1 } or fail $@;
-  eval { require Data::Validate::Domain; 1 } or fail $@;
+  eval { require Data::Validate::Domain; Data::Validate::Domain->VERSION(0.13); 1 } or fail $@;
   eval { require Net::IDN::Encode; 1 } or fail $@;
 }
 
@@ -63,7 +63,7 @@ acceptance_tests(
           !$ENV{AUTHOR_TESTING} && !eval { require Time::Moment; 1 } ? 'date-time.json' : (),
           !$ENV{AUTHOR_TESTING} && !eval { require DateTime::Format::RFC3339; 1 } ? 'date-time.json' : (),
           !$ENV{AUTHOR_TESTING} && !eval { require Email::Address::XS; Email::Address::XS->VERSION(1.04); 1 } ? 'email.json' : (),
-          !$ENV{AUTHOR_TESTING} && !eval { require Data::Validate::Domain; 1 } ? 'hostname.json' : (),
+          !$ENV{AUTHOR_TESTING} && !eval { require Data::Validate::Domain; Data::Validate::Domain->VERSION(0.13); 1 } ? 'hostname.json' : (),
         ] },
       # various edge cases that are difficult to accomodate
       { file => 'uri.json',
