@@ -1,6 +1,8 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - bump required version for optional module Data::Validate::Domain
+            (used by the 'hostname' and 'idn-hostname' formats)
 
 0.605     2025-03-09 16:31:05Z
           - update 'hostname' and 'idn-hostname' format validation to be more
